Fix spacing on pile "play" and card "select" buttons

--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,9 @@
 }
 
 .pile-set {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-bottom: 10px;
 }
 
@@ -114,6 +117,10 @@
   align-items: center;
   justify-content: center;
   background-color: darkred;
+}
+
+.pile-button {
+  display: block;
 }
 
 .flex-center {
@@ -160,4 +167,14 @@
   border: 1px solid white;
   font-size: 24px;
   background-color: dodgerblue;
+}
+
+.card-button {
+  display: block;
+}
+
+.card-set {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
